check new version with latest photos