@@ -1,20 +1,13 @@
 @echo off
 :: mcdonald.john.alan@gmail.com
-:: 2018-12-17
+:: 2021-01-28
 
 ::set GC=-XX:+AggressiveHeap -XX:+UseStringDeduplication 
 set GC=
 
-set COMPRESSED=
-::set COMPRESSED=-XX:CompressedClassSpaceSize=3g 
-
 set TRACE=
 ::set TRACE=-XX:+PrintGCDetails -XX:+TraceClassUnloading -XX:+TraceClassLoading
 
-set PROF=
-::set PROF=-Xrunhprof:cpu=samples,depth=96,thread=y,doe=y
-
-::set THRUPUT=-d64 -server -XX:+AggressiveOpts 
 set THRUPUT=-server
 ::set THRUPUT=
 
@@ -24,7 +17,7 @@ set XMX=-Xms12g -Xmx12g -Xmn5g
 set OPENS=--add-opens java.base/java.lang=ALL-UNNAMED
 set CP=-cp ./src/scripts/clojure;lib/*
 
-set JAVA_HOME=%JAVA12%
+::set JAVA_HOME=%JAVA12%
 set JAVA="%JAVA_HOME%\bin\java"
 
 set CMD=%JAVA% %THRUPUT% -ea %GC% %PROF% %XMX% %COMPRESSED% %TRACE% %OPENS% %CP% clojure.main %*
